corrected footer spacing

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ footer {
 	/* position: absolute;
 	bottom: 0; */
 	display: inline-flex;
+	justify-content: space-between;
 	flex-wrap: nowrap;
 	width: 100%;
 	background-color: #858585;
@@ -42,11 +43,13 @@ footer {
 }
 
 .footer-buttons {
-	margin-left: 70vw;
+	margin-right: 15px
 }
 
 .social-button {
 	width: 10px;
 	padding: 10px;
+	margin: 0 10px;
 	background-color: white;
 }
+
